--- a/view/mentions_legales.html
+++ b/view/mentions_legales.html
@@ -19,11 +19,11 @@
     </head>
 
     <body>        
-        <header>
-            <a href="..\index.html">
+        <header class="header_top">
+            <a href="../index.html">
                 <h1>ohmyfood</h1>
             </a>        
-        </header>   
+        </header> 
 
         <main class="block_center padding_top">
             <p class="margin_null in-work">Bla Bla Bla<span>.</span><span>.</span><span>.</span></p>
