--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -32,13 +32,11 @@
             </div> 
             <article>
                 <h3 class="margin_null">La note enchantée</h3>
-                <section class="block_center">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                            <h4 class="size_title_menu1 hvr-underline-from-left">Prélude</h4>
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                        </div>
+                <section>
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                        <h4 class="size_title_menu1 hvr-underline-from-left">Prélude</h4>
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
@@ -59,13 +57,11 @@
                         </li>
                     </ul>                   
                 </section>                
-                <section class="block_center">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                            <h4 class="size_title_menu1 hvr-underline-from-left">Point d'orgue</h4>
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                        </div>
+                <section>
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                        <h4 class="size_title_menu1 hvr-underline-from-left">Point d'orgue</h4>
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
@@ -82,23 +78,21 @@
                         </li>                                
                     </ul>     
                 </section>                        
-                <section class="block_center">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                            <h4 class="size_title_menu1 hvr-underline-from-left">Mouvement final</h4>
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                        </div>
+                <section>
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                        <h4 class="size_title_menu1 hvr-underline-from-left">Mouvement final</h4>
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
-                        <li class="flex_space-between">
-                            <p class="padding_left">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                    <ul class="flex_column">
+                        <li class="padding_bottom_20px">
+                            <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                         </li>
-                        <li class="flex_space-between">
-                            <p class="padding_left">Baba au rhum revisité avec son coulis de citron</p>
+                        <li class="padding_bottom_20px">
+                            <p>Baba au rhum revisité avec son coulis de citron</p>
                         </li>                                
-                        <li class="flex_space-between">
-                            <p class="padding_left">Tarte au citron meringuée destructurée</p>
+                        <li class="padding_bottom_20px">
+                            <p>Tarte au citron meringuée destructurée</p>
                         </li>                                
                     </ul>     
                 </section>
