--- a/view/menu_2b.html
+++ b/view/menu_2b.html
@@ -29,13 +29,11 @@
         <main class="block_center width_menu color_menu--bg2 style_menu2 padding_bottom">  
             <article>
                 <h3 class="style_title-two margin_null padding_top">Le chic à la française</h3>
-                <section class="block_center style_menu2--a">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Pour se mettre en appétit</h4>
-                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
-                        </div>
+                <section class="style_menu2--a">
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Pour se mettre en appétit</h4>
+                        <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
@@ -52,13 +50,11 @@
                         </li>
                     </ul>          
                 </section>      
-                <section class="block_center style_menu2--b">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Plaisir des papilles</h4>
-                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
-                        </div>
+                <section class="style_menu2--b">
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Plaisir des papilles</h4>
+                        <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
@@ -75,22 +71,20 @@
                         </li>                                
                     </ul>     
                 </section>                        
-                <section class="block_center style_menu2--c">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Gourmandises sucrées</h4>
-                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
-                        </div>
+                <section class="style_menu2--c">
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Gourmandises sucrées</h4>
+                        <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
-                        <li class="flex_space-between">
+                    <ul class="flex_column">
+                        <li class="padding_bottom_20px">
                             <p class="padding_left">Pétales de violettes glacés et purée de noisettes</p>
                         </li>
-                        <li class="flex_space-between">
+                        <li class="padding_bottom_20px">
                             <p class="padding_left">Fondant au chocolat revisité</p>
                         </li>
-                        <li class="flex_space-between">
+                        <li class="padding_bottom_20px">
                             <p class="padding_left">Millefeuille croustillant </p>
                         </li>
                     </ul>     
