--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -30,13 +30,11 @@
         <main class="block_center width_menu color_menu--bg3  style_menu3 padding_bottom">  
             <article>
                 <h3 class="margin_null padding_top style_title-three">Le délice des papilles</h3>       
-                <section class="block_center style_menu3-b">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Pour bien commencer</h4>
-                            <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
-                        </div>
+                <section class="style_menu3-b">
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Pour bien commencer</h4>
+                        <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
@@ -53,13 +51,11 @@
                         </li>
                     </ul>                   
                 </section>
-                <section class="block_center style_menu3-b">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Pour bien continuer</h4>
-                            <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
-                        </div>
+                <section class="style_menu3-b">
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Pour bien continuer</h4>
+                        <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
@@ -76,13 +72,11 @@
                         </li>                                
                     </ul>     
                 </section>                         
-                <section class="block_center style_menu3-b">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Pour bien terminer</h4>
-                            <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
-                        </div>
+                <section class="style_menu3-b">
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Pour bien terminer</h4>
+                        <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
