--- a/view/menu_4b.html
+++ b/view/menu_4b.html
@@ -19,7 +19,6 @@
         <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
             
     </head>
-
     <body>        
         <header class="header_top">
             <a href="../index.html">
@@ -30,13 +29,11 @@
         <main class="block_center width_menu color_menu--bg4  style_menu4 padding_bottom">
             <article>
                 <h3 class="margin_null style_title-four">La palette du goût</h3>
-                <section class="block_center">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Esquisse</h4>
-                            <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
-                        </div>
+                <section>
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Esquisse</h4>
+                        <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
                     </header>
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
@@ -53,16 +50,12 @@
                         </li>                  
                     </ul>
                 </section>
-
-                <section class="block_center">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Oeuvre de maître</h4>
-                            <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
-                        </div>
+                <section>
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Oeuvre de maître</h4>
+                        <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
                     </header>
-
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
@@ -78,16 +71,12 @@
                         </li>                                
                     </ul>     
                 </section>  
-
-                <section class="block_center">
-                    <header class="flexbox block_center">
-                        <div class="flex_center">
-                            <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
-                            <h4 class="hvr-underline-from-left">Au sommet de l'art</h4>
-                            <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
-                        </div>
+                <section>
+                    <header class="flexbox flex_center">
+                        <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
+                        <h4 class="hvr-underline-from-left">Au sommet de l'art</h4>
+                        <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
                     </header>
-
                     <ul class="flex_column flex_center">
                         <li class="flex_space-between">
                             <p>Paris-Brest revisité</p>
