--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -26,12 +26,6 @@ ul{
     padding:0;
 }
 
-.flex_center{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .txt_center{
     text-align: center;
 }
@@ -57,35 +51,43 @@ ul{
     padding-bottom: 80px;
 }
 
+.padding_bottom_20px{    
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 20px;
+}
+
+
 .padding-l-r{
     padding-left: 10px;
     padding-right: 10px;
 }
 
-.padding_right{
-    padding-right: 10px;
+.padding{
+    &_righ{
+        display: inline-block;
+        padding-right: 10px;
+
+    }
+    &_left{
+        display: inline-block;
+        padding-left: 10px;
+
+    } 
 }
 
-.padding_left{
-    padding-left: 10px;
-}
+
 
 .margin_null{
     margin: 0;
 }
 
-.flexbox{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap; 
-}
+
 
 .img-orientation{
     transform: scaleX(-1);
 }
 
-
- 
 
 @media ( min-width : 1200px ) {
     h3{
@@ -116,4 +118,8 @@ ul{
             font-size: 2.3rem;
         }
     }  
+
+    .padding_bottom_20px{   
+        padding-left: 170px;
+    }
 }
