--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -1,7 +1,6 @@
 main {       
     min-height: calc(100vh - 70px);
     margin: 0 auto;
-    width: 15em
 }
 
 section{
@@ -108,15 +107,15 @@ $note-sizes:(
 }
 
 
-.padding{
-    &_righ{
-        display: inline-block;
-    }
-    &_left{
-        display: inline-block;
-    } 
-}
+///////////////////TEST///////////////
 
+.rectangle-menu{
+    margin-top: 50px;
+    height: 220px;
+    width: 45%;
+    line-height:20px; /* centrage vertical */
+    text-align:center; /* centrage horizontal */
+}
 
 /*Underline From Left */
 .hvr-underline-from-left {
@@ -134,10 +133,10 @@ $note-sizes:(
     left: 0;
     right: 100%;
     bottom: 0;
-    background: $cd-menu1-txt;
     height: 4px;
     transition-property: right;
     transition-duration: 0.3s;
+    background: $cd-menu1-txt;
     transition-timing-function: ease-out;
 }
 .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
@@ -183,6 +182,18 @@ $note-sizes:(
 
 
 /////////FLEX///////////
+.flexbox{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; 
+}
+
+.flex_center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .flex_column{
     display: flex;
     flex-direction: column;
@@ -194,9 +205,16 @@ $note-sizes:(
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 20px;
-
 }
 
+.flex_space-between p{
+    &:first-child{
+        width: 80%;
+    }
+    &:last-child{
+        width: 10%;
+    }
+}
 
 .flex_nowrap{
     flex-shrink: 0;
@@ -238,11 +256,7 @@ $note-sizes:(
 ///******************TABLETTE******************///
 
 @media (min-width: 768px) {
-    main{
-        margin-left: auto;
-        margin-right: auto;
-        width: auto;
-    }
+    
 
     .bar_menu{
         max-width: 100%;
@@ -266,6 +280,7 @@ $note-sizes:(
     }
 
 
+
       ////////Menu1///////
     .style_menu1{
         font-size: 5rem;
@@ -275,6 +290,12 @@ $note-sizes:(
      .style_menu2{
         font-size: 3rem;
     }
+
+    .rectangle-menu{
+        height: 600px;
+        width: 40%;
+    }
+
 }    
 
 
@@ -333,4 +354,10 @@ $note-sizes:(
         height: auto;
         width: 30% 
     }
+
+    .rectangle-menu{
+        height: 550px;
+        width: 20%;
+    }
+
 }
