--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -26,19 +26,19 @@
             </a>        
         </header> 
         <h2>La note enchantée</h2> 
-        <main class="block_center width_menu color_menu--bg1  style_menu1 padding_bottom"> 
+        <main class="block_center width_menu color_menu--bg1 shadow-box style_menu1 padding_bottom"> 
             <div class="txt_center padding_top">
                 <i class="note--color note--top fas fa-music"></i>
             </div> 
-            <article>
+            <article class="flex_center flex_column">
                 <h3 class="margin_null">La note enchantée</h3>
-                <section>
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center">
+                    <header class="flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                        <h4 class="size_title_menu1 hvr-underline-from-left">Prélude</h4>
+                        <h4 class="size_title_menu1 underline-menu underline-menu1">Prélude</h4>
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Ravioles de foie gras accompagnés de leur crème</p>
                             <p>98€</p>
@@ -57,13 +57,13 @@
                         </li>
                     </ul>                   
                 </section>                
-                <section>
+                <section class="flex_column flex_center">
                     <header class="flexbox flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                        <h4 class="size_title_menu1 hvr-underline-from-left">Point d'orgue</h4>
+                        <h4 class="size_title_menu1 underline-menu underline-menu1">Point d'orgue</h4>
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
                             <p>102€</p>
@@ -78,13 +78,13 @@
                         </li>                                
                     </ul>     
                 </section>                        
-                <section>
+                <section class="flex_column flex_center">
                     <header class="flexbox flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
-                        <h4 class="size_title_menu1 hvr-underline-from-left">Mouvement final</h4>
+                        <h4 class="size_title_menu1 underline-menu underline-menu1">Mouvement final</h4>
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                     </header>
-                    <ul class="flex_column">
+                    <ul>
                         <li class="padding_bottom_20px">
                             <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                         </li>
