--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -27,16 +27,16 @@
             </a>        
         </header>
         <h2>Le délice des papilles</h2>
-        <main class="block_center width_menu color_menu--bg3  style_menu3 padding_bottom">  
-            <article>
+        <main class="block_center width_menu color_menu--bg3 shadow-box style_menu3 padding_bottom">  
+            <article class="flex_center flex_column">
                 <h3 class="margin_null padding_top style_title-three">Le délice des papilles</h3>       
-                <section class="style_menu3-b">
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center style_menu3-b">
+                    <header class="flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Pour bien commencer</h4>
+                        <h4 class="underline-menu underline-menu3">Pour bien commencer</h4>
                         <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Tartare de thon assaisonné au yuzu</p>
                             <p>55€</p>
@@ -51,13 +51,13 @@
                         </li>
                     </ul>                   
                 </section>
-                <section class="style_menu3-b">
+                <section class="flex_column flex_center style_menu3-b">
                     <header class="flexbox flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Pour bien continuer</h4>
+                        <h4 class="underline-menu underline-menu3">Pour bien continuer</h4>
                         <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
                             <p>110€</p>
@@ -72,13 +72,13 @@
                         </li>                                
                     </ul>     
                 </section>                         
-                <section class="style_menu3-b">
+                <section class="flex_column flex_center style_menu3-b">
                     <header class="flexbox flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Pour bien terminer</h4>
+                        <h4 class="underline-menu underline-menu3">Pour bien terminer</h4>
                         <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Farandole de desserts du chef</p>
                             <p>55€</p>
