--- a/view/prochainement.html
+++ b/view/prochainement.html
@@ -26,7 +26,7 @@
         </header>
         
         <main class="block_center padding_top">
-            <p class="margin_null in-work">In wOrK<span>.</span><span>.</span><span>.</span></p>
+            <p class="margin_null in-work">In wOrK<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></p>
         </main>
 
         <a class="btn block_center margin_null" href="../index.html">Retour</a>
