--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -42,6 +42,9 @@ section{
 
 .scale_img{
     width: 45vw;
+}
+
+.shadow-box{
     box-shadow: 0px 0px 10px 6px rgb(218, 218, 218);
 }
 
@@ -106,54 +109,61 @@ $note-sizes:(
     @include note-size($note-sizes);
 }
 
-
-///////////////////TEST///////////////
-
 .rectangle-menu{
     margin-top: 50px;
     height: 220px;
     width: 45%;
-    line-height:20px; /* centrage vertical */
-    text-align:center; /* centrage horizontal */
 }
 
-/*Underline From Left */
-.hvr-underline-from-left {
-    vertical-align: middle;
-    display: inline-block;
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    overflow: hidden;
-}
-.hvr-underline-from-left:before {
+///////////////////TEST///////////////
+.underline-menu:after {
     content: "";
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    right: 100%;
-    bottom: 0;
-    height: 4px;
-    transition-property: right;
-    transition-duration: 0.3s;
-    background: $cd-menu1-txt;
-    transition-timing-function: ease-out;
+    display: block;
+    height: 3px;
+    width: 0;
+    padding: 0 10px;
+    background: transparent;
+    transition: width 0.5s ease, background-color 0.5s ease;
+  }
+  .underline-menu:hover:after {
+    width: 90%;
+  }
+  .underline-menu1:hover:after {
+    background: #6B4649;
+  }
+  .underline-menu2:hover:after {
+    background: linear-gradient(30deg, #C67412, #A56799, #6E4CCC);
+  }
+  .underline-menu3:hover:after {
+    background: linear-gradient(30deg, #0E32DE, #0B73F3, #4EAFF7);
+  }
+  .underline-menu4:hover:after {
+    background: linear-gradient(0.3turn, #3D923A, #E4FECD);
+  }
+//////////////DOT/////////////
+.dot {
+    animation: 2s blink ease infinite;
+    &.one { animation-delay: 0.2s; }
+    &.two { animation-delay: 0.4s; }
+    &.three { animation-delay: 0.6s; }
 }
-.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
-    right: 0;   
+
+@keyframes blink {
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
 }
 
 
   ////////Menu1///////
-  .style_menu1{
+.style_menu1{
     font-size: 2rem;
     font-family: "Devonshire-Regular";
     color: $cd-menu1-txt;    
 }
   ////////Menu2///////
-  .style_menu2{
-    font-size: 1.3rem;
-
+ .style_menu2{
+    font-size: 0.8rem;
     font-family: "Croissantone-regular";
     &--a{
         color: $cd-menu2-a-txt;
@@ -168,14 +178,14 @@ $note-sizes:(
 
  ////////Menu3///////
  .style_menu3{
-    font-size: 2rem;
+    font-size: 1.2rem;
     font-family: "Soozle";
     color: $cd-menu3-txt;    
 }
 
  ////////Menu4///////
 .style_menu4{
-    font-size: 2rem;
+    font-size: 1.2rem;
     font-family: "Soozle";
     color: $cd-menu4-txt;
 }
@@ -193,6 +203,7 @@ $note-sizes:(
     align-items: center;
     justify-content: center;
 }
+
 
 .flex_column{
     display: flex;
@@ -220,38 +231,7 @@ $note-sizes:(
     flex-shrink: 0;
 }
 
-.in-work {
-    text-align: center;
-    font-size: 12rem;
-}
 
-.in-work span {
-    font-size: 15rem;
-    animation-name: blink;
-    animation-duration: 1.4s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
-  }
-  
-  .in-work span:nth-child(2) {
-    animation-delay: .2s;
-  }
-  
-  .in-work span:nth-child(3) {
-    animation-delay: .4s;
-  }
-  
-@keyframes blink {
-    0% {
-        opacity: .2;
-    }
-    20% {
-        opacity: 1;
-    }
-    100% {
-        opacity: .2;
-    }
-}
 
 ///******************TABLETTE******************///
 
@@ -290,6 +270,17 @@ $note-sizes:(
      .style_menu2{
         font-size: 3rem;
     }
+
+      ////////Menu3///////
+      .style_menu3{
+        font-size: 3rem;
+    }
+
+     ////////Menu4///////
+     .style_menu4{
+        font-size: 3rem;
+    }
+
 
     .rectangle-menu{
         height: 600px;
@@ -346,6 +337,16 @@ $note-sizes:(
 
      ////////Menu2///////
      .style_menu2{
+        font-size: 2rem;
+    }
+
+       ////////Menu3///////
+       .style_menu3{
+        font-size: 2rem;
+    }
+
+       ////////Menu4///////
+       .style_menu4{
         font-size: 2rem;
     }
 
