--- a/css/style.css
+++ b/css/style.css
@@ -62,15 +62,6 @@ ul {
   padding-right: 10px;
 }
 
-.padding_righ {
-  display: inline-block;
-  padding-right: 10px;
-}
-.padding_left {
-  display: inline-block;
-  padding-left: 10px;
-}
-
 .margin_null {
   margin: 0;
 }
@@ -266,6 +257,9 @@ section {
 
 .scale_img {
   width: 45vw;
+}
+
+.shadow-box {
   box-shadow: 0px 0px 10px 6px #dadada;
 }
 
@@ -323,40 +317,62 @@ section {
   margin-top: 50px;
   height: 220px;
   width: 45%;
-  line-height: 20px;
-  /* centrage vertical */
-  text-align: center;
-  /* centrage horizontal */
 }
 
-/*Underline From Left */
-.hvr-underline-from-left {
-  vertical-align: middle;
-  display: inline-block;
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  overflow: hidden;
-}
-
-.hvr-underline-from-left:before {
+.underline-menu:after {
   content: "";
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  right: 100%;
-  bottom: 0;
-  height: 4px;
-  transition-property: right;
-  transition-duration: 0.3s;
-  background: #6b4649;
-  transition-timing-function: ease-out;
+  display: block;
+  height: 3px;
+  width: 0;
+  padding: 0 10px;
+  background: transparent;
+  transition: width 0.5s ease, background-color 0.5s ease;
 }
 
-.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
-  right: 0;
+.underline-menu:hover:after {
+  width: 90%;
 }
 
+.underline-menu1:hover:after {
+  background: #6B4649;
+}
+
+.underline-menu2:hover:after {
+  background: linear-gradient(30deg, #C67412, #A56799, #6E4CCC);
+}
+
+.underline-menu3:hover:after {
+  background: linear-gradient(30deg, #0E32DE, #0B73F3, #4EAFF7);
+}
+
+.underline-menu4:hover:after {
+  background: linear-gradient(0.3turn, #3D923A, #E4FECD);
+}
+
+.dot {
+  animation: 2s blink ease infinite;
+}
+.dot.one {
+  animation-delay: 0.2s;
+}
+.dot.two {
+  animation-delay: 0.4s;
+}
+.dot.three {
+  animation-delay: 0.6s;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .style_menu1 {
   font-size: 2rem;
   font-family: "Devonshire-Regular";
@@ -364,7 +380,7 @@ section {
 }
 
 .style_menu2 {
-  font-size: 1.3rem;
+  font-size: 0.8rem;
   font-family: "Croissantone-regular";
 }
 .style_menu2--a {
@@ -378,13 +394,13 @@ section {
 }
 
 .style_menu3 {
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-family: "Soozle";
   color: #181919;
 }
 
 .style_menu4 {
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-family: "Soozle";
   color: #4a4a4a;
 }
@@ -425,38 +441,6 @@ section {
   flex-shrink: 0;
 }
 
-.in-work {
-  text-align: center;
-  font-size: 12rem;
-}
-
-.in-work span {
-  font-size: 15rem;
-  animation-name: blink;
-  animation-duration: 1.4s;
-  animation-iteration-count: infinite;
-  animation-fill-mode: both;
-}
-
-.in-work span:nth-child(2) {
-  animation-delay: 0.2s;
-}
-
-.in-work span:nth-child(3) {
-  animation-delay: 0.4s;
-}
-
-@keyframes blink {
-  0% {
-    opacity: 0.2;
-  }
-  20% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.2;
-  }
-}
 @media (min-width: 768px) {
   .bar_menu {
     max-width: 100%;
@@ -483,6 +467,14 @@ section {
   }
 
   .style_menu2 {
+    font-size: 3rem;
+  }
+
+  .style_menu3 {
+    font-size: 3rem;
+  }
+
+  .style_menu4 {
     font-size: 3rem;
   }
 
@@ -532,6 +524,14 @@ section {
   }
 
   .style_menu2 {
+    font-size: 2rem;
+  }
+
+  .style_menu3 {
+    font-size: 2rem;
+  }
+
+  .style_menu4 {
     font-size: 2rem;
   }
 
