--- a/view/menu_2b.html
+++ b/view/menu_2b.html
@@ -26,16 +26,16 @@
             </a>        
         </header>
         <h2>Le chic à la française</h2>
-        <main class="block_center width_menu color_menu--bg2 style_menu2 padding_bottom">  
-            <article>
+        <main class="block_center width_menu color_menu--bg2 shadow-box style_menu2 padding_bottom">  
+            <article class="flex_center flex_column">
                 <h3 class="style_title-two margin_null padding_top">Le chic à la française</h3>
-                <section class="style_menu2--a">
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center style_menu2--a">
+                    <header class="flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Pour se mettre en appétit</h4>
+                        <h4 class="underline-menu underline-menu2">Pour se mettre en appétit</h4>
                         <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Tartare de poulpe acidulé aux zests d'orange</p>
                             <p>79€</p>
@@ -50,13 +50,13 @@
                         </li>
                     </ul>          
                 </section>      
-                <section class="style_menu2--b">
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center style_menu2--b">
+                    <header class="flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Plaisir des papilles</h4>
+                        <h4 class="underline-menu underline-menu2">Plaisir des papilles</h4>
                         <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
                             <p>95€</p>
@@ -71,21 +71,21 @@
                         </li>                                
                     </ul>     
                 </section>                        
-                <section class="style_menu2--c">
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center style_menu2--c">
+                    <header class="flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Gourmandises sucrées</h4>
+                        <h4 class="underline-menu underline-menu2">Gourmandises sucrées</h4>
                         <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
                     </header>
-                    <ul class="flex_column">
+                    <ul>
                         <li class="padding_bottom_20px">
-                            <p class="padding_left">Pétales de violettes glacés et purée de noisettes</p>
+                            <p>Pétales de violettes glacés et purée de noisettes</p>
                         </li>
                         <li class="padding_bottom_20px">
-                            <p class="padding_left">Fondant au chocolat revisité</p>
+                            <p>Fondant au chocolat revisité</p>
                         </li>
                         <li class="padding_bottom_20px">
-                            <p class="padding_left">Millefeuille croustillant </p>
+                            <p>Millefeuille croustillant </p>
                         </li>
                     </ul>     
                 </section>                       
