--- a/view/menu_4b.html
+++ b/view/menu_4b.html
@@ -26,16 +26,16 @@
             </a>        
         </header>
         <h2>La palette du goût</h2> 
-        <main class="block_center width_menu color_menu--bg4  style_menu4 padding_bottom">
-            <article>
+        <main class="block_center width_menu color_menu--bg4 shadow-box style_menu4 padding_bottom">
+            <article class="flex_center flex_column">
                 <h3 class="margin_null style_title-four">La palette du goût</h3>
-                <section>
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center">
+                    <header class="flex_center">
                         <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Esquisse</h4>
+                        <h4 class="underline-menu underline-menu4">Esquisse</h4>
                         <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Fricassée d'escargot au piment d'espelette</p>
                             <p>60€</p>
@@ -50,13 +50,13 @@
                         </li>                  
                     </ul>
                 </section>
-                <section>
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center">
+                    <header class="flex_center">
                         <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Oeuvre de maître</h4>
+                        <h4 class="underline-menu underline-menu4">Oeuvre de maître</h4>
                         <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
                             <p>70€</p>
@@ -71,13 +71,13 @@
                         </li>                                
                     </ul>     
                 </section>  
-                <section>
-                    <header class="flexbox flex_center">
+                <section class="flex_column flex_center">
+                    <header class="flex_center">
                         <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
-                        <h4 class="hvr-underline-from-left">Au sommet de l'art</h4>
+                        <h4 class="underline-menu underline-menu4">Au sommet de l'art</h4>
                         <img class="bar_menu rotate-bar_menu padding_left" src="../img/bar_menu4.png" alt="" />
                     </header>
-                    <ul class="flex_column flex_center">
+                    <ul>
                         <li class="flex_space-between">
                             <p>Paris-Brest revisité</p>
                             <p>55€</p>
