--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h2, h3, h4 {
 }
 
 h2, h3 {
-  font-size: 5rem;
+  font-size: 3rem;
 }
 
 body {
@@ -70,6 +70,10 @@ ul {
   margin: 0;
 }
 
+.margin_top {
+  margin-top: 0.5vw;
+}
+
 .img-orientation {
   transform: scaleX(-1);
 }
@@ -102,6 +106,10 @@ ul {
 
   .padding_bottom_20px {
     padding-left: 170px;
+  }
+
+  .margin_top {
+    margin-top: 5vw;
   }
 }
 @font-face {
@@ -315,6 +323,9 @@ section {
   font-size: 10vw;
 }
 .note--bottom {
+  font-size: 5vw;
+}
+.note--index {
   font-size: 5vw;
 }
 
@@ -549,6 +560,10 @@ section {
   .rectangle-menu {
     height: 550px;
     width: 20%;
+  }
+
+  .note--index {
+    font-size: 2vw;
   }
 }
 
