--- a/view/menu_4b.html
+++ b/view/menu_4b.html
@@ -28,7 +28,7 @@
         <h2>La palette du goût</h2> 
         <main class="block_center width_menu color_menu--bg4 shadow-box style_menu4 padding_bottom">
             <article class="flex_center flex_column">
-                <h3 class="margin_null style_title-four">La palette du goût</h3>
+                <h3 class="margin_null padding_top style_title-four">La palette du goût</h3>
                 <section class="flex_column flex_center">
                     <header class="flex_center">
                         <img class="bar_menu padding_right" src="../img/bar_menu4.png" alt="" />
