--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -19,7 +19,6 @@
         <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
             
     </head>
-
     <body>        
         <header class="header_top">
             <a href="../index.html">
@@ -78,9 +77,9 @@
                         <h4 class="underline-menu underline-menu3">Pour bien terminer</h4>
                         <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
                     </header>
-                    <ul>
+                    <ul class="width_menu_100">
                         <li class="flex_space-between">
-                            <p>Farandole de desserts du chef</p>
+                            <p class="">Farandole de desserts du chef</p>
                             <p>55€</p>
                         </li>
                         <li class="flex_space-between">
