--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -4,7 +4,15 @@ main {
 }
 
 section{
-    width: 80vw;    
+    width: 80vw;
+    transform: scale(1);
+    transition: transform 200ms;
+    &:hover a{      
+        transform: scale(1.10);
+    }
+    &:focus a{      
+        transform: scale(1.10);
+    }     
 }
 
 .style_title-two{
@@ -311,11 +319,6 @@ $note-sizes:(
     .scale_img{
         width: 20vw;
         box-shadow: 0px 0px 10px 6px rgb(218, 218, 218);
-        transform: scale(1);
-        transition: transform 200ms;
-        &:hover {
-            transform: scale(1.10);
-        }
     }
 
     .width_menu{
