--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ ul {
   }
 
   .padding_bottom_20px {
-    padding-left: 170px;
+    padding-left: 0;
   }
 }
 @font-face {
@@ -225,6 +225,14 @@ main {
 
 section {
   width: 80vw;
+  transform: scale(1);
+  transition: transform 200ms;
+}
+section:hover a {
+  transform: scale(1.1);
+}
+section:focus a {
+  transform: scale(1.1);
 }
 
 .style_title-two {
@@ -503,11 +511,6 @@ section {
   .scale_img {
     width: 20vw;
     box-shadow: 0px 0px 10px 6px #dadada;
-    transform: scale(1);
-    transition: transform 200ms;
-  }
-  .scale_img:hover {
-    transform: scale(1.1);
   }
 
   .width_menu {
