--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -122,8 +122,8 @@ $note-sizes:(
 
 .rectangle-menu{
     margin-top: 50px;
-    height: 220px;
-    width: 45%;
+    height: 400px;
+    width: 250px;
 }
 
 ///////////////////TEST///////////////
@@ -295,8 +295,8 @@ $note-sizes:(
 
 
     .rectangle-menu{
-        height: 600px;
-        width: 40%;
+        height: 550px;
+        width: 400px;
     }
 
 }    
