--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -4,7 +4,15 @@ main {
 }
 
 section{
-    width: 80vw;    
+    width: 80vw;
+    transform: scale(1);
+    transition: transform 200ms;
+    &:hover a{      
+        transform: scale(1.10);
+    }
+    &:focus a{      
+        transform: scale(1.10);
+    }     
 }
 
 .style_title-two{
@@ -166,7 +174,7 @@ $note-sizes:(
 }
   ////////Menu2///////
  .style_menu2{
-    font-size: 0.8rem;
+    font-size: 2rem;
     font-family: "Croissantone-regular";
     &--a{
         color: $cd-menu2-a-txt;
@@ -181,14 +189,14 @@ $note-sizes:(
 
  ////////Menu3///////
  .style_menu3{
-    font-size: 1.2rem;
+    font-size: 2rem;
     font-family: "Soozle";
     color: $cd-menu3-txt;    
 }
 
  ////////Menu4///////
 .style_menu4{
-    font-size: 1.2rem;
+    font-size: 2rem;
     font-family: "Soozle";
     color: $cd-menu4-txt;
 }
@@ -267,7 +275,7 @@ $note-sizes:(
 
       ////////Menu1///////
     .style_menu1{
-        font-size: 5rem;
+        font-size: 4rem;
     }
 
      ////////Menu2///////
@@ -313,11 +321,6 @@ $note-sizes:(
     .scale_img{
         width: 20vw;
         box-shadow: 0px 0px 10px 6px rgb(218, 218, 218);
-        transform: scale(1);
-        transition: transform 200ms;
-        &:hover {
-            transform: scale(1.10);
-        }
     }
 
     .width_menu{
@@ -341,22 +344,22 @@ $note-sizes:(
 
       ////////Menu1///////
     .style_menu1{
-        font-size: 3rem;
+        font-size: 4rem;
     }
 
      ////////Menu2///////
      .style_menu2{
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
        ////////Menu3///////
        .style_menu3{
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
        ////////Menu4///////
        .style_menu4{
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     .bar_menu{
