Revert "Merge pull request #10 from J-Roza/dev"
This reverts commit cbf27ec75009d63bef3fbb7cba8ee6f814ba1800.

--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -51,7 +51,7 @@
                     </ul>                   
                 </section>
                 <section class="flex_column flex_center style_menu3-b">
-                    <header class="flex_center">
+                    <header class="flexbox flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
                         <h4 class="underline-menu underline-menu3">Pour bien continuer</h4>
                         <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
@@ -72,7 +72,7 @@
                     </ul>     
                 </section>                         
                 <section class="flex_column flex_center style_menu3-b">
-                    <header class="flex_center">
+                    <header class="flexbox flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
                         <h4 class="underline-menu underline-menu3">Pour bien terminer</h4>
                         <img class="bar_menu img-orientation padding-l-r" src="../img/bar_menu3.png" alt="" />
